--- a/public/about.html
+++ b/public/about.html
@@ -61,8 +61,8 @@
 			<!-- <a class="navbar-brand logo-text page-scroll" href="index.html">Aria</a> -->
 
 			<!-- Image Logo -->
-			<a class="navbar-brand logo-image" href="../index.html"><img
-					style="height: 60px;width: 60px;background: #fff;border-radius: 5%;" src="../images/logo.jpg"></a>
+			<a class="navbar-brand logo-image" href="../index.html"><img style="height: 60px;width: 60px"
+					src="../images/LinxLogo.png"></a>
 
 			<!-- Mobile Menu Toggle Button -->
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
@@ -78,7 +78,7 @@
 						<a class="nav-link page-scroll" href="../index.html">首页</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link page-scroll" href="../public/lowCode.html">低代码PASS平台</a>
+						<a class="nav-link page-scroll" href="../public/lowCode.html">低代码PaaS平台</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link page-scroll" href="../public/programme.html">工业电气解决方案</a>
@@ -193,13 +193,13 @@
 				<div class="timeline-box">
 					<div class="header"><img src="../images/icon/stytem.png"></div>
 					<h3>2002</h3>
-					<p>施耐德配电和尤妮佳工厂基于"灵娃管理"平台开发的"LINX MES"系统上线</p>
+					<p>施耐德配电和尤妮佳工厂基于"灵蛙管理"平台开发的"LINX MES"系统上线</p>
 				</div>
 
 				<div class="timeline-box">
 					<div class="header"><img src="../images/icon/jijin.png"></div>
 					<h3>2005</h3>
-					<p>自主"灵娃管理"软件开发获"上海市创新基金"</p>
+					<p>自主"灵蛙管理"软件开发获"上海市创新基金"</p>
 				</div>
 
 				<div class="timeline-box">
@@ -217,24 +217,24 @@
 				<div class="timeline-box">
 					<div class="header"><img src="../images/icon/ruanjian.png"></div>
 					<h3>2013</h3>
-					<p>基于"灵娃管理"平台研发的物料拉动和供应系统"LINEX-kanban"软件1.0版发布</p>
+					<p>基于"灵蛙管理"平台研发的物料拉动和供应系统"LINEX-kanban"软件1.0版发布</p>
 				</div>
 
 				<div class="timeline-box">
 					<div class="header"><img src="../images/icon/guanli.png"></div>
 					<h3>2015</h3>
-					<p>"灵娃管理"软件3.0版发布</p>
+					<p>"灵蛙管理"软件3.0版发布</p>
 				</div>
 
 				<div class="timeline-box">
 					<div class="header"><img src="../images/icon/hebing.png"></div>
 					<h3>2016</h3>
-					<p>工业4.0系统集成商"中智浩云"收购"上海灵娃"</p>
+					<p>工业4.0系统集成商"中智浩云"收购"上海灵蛙"</p>
 				</div>
 				<div class="timeline-box">
 					<div class="header"><img src="../images/icon/modity.png"></div>
 					<h3>2018</h3>
-					<p>上海灵娃科贸有限公司更名为上海灵娃智能科技有限公司</p>
+					<p>上海灵蛙科贸有限公司更名为上海灵娃智能科技有限公司</p>
 				</div>
 
 
@@ -283,127 +283,96 @@
 			<div class="container">
 				<h2>我们荣誉</h2>
 				<div class="row">
-					<div class="col-md-6">
+					<div class="col-md-6" ,width="80%" ,height="95">
 						<img src="../images/rongyu1.png">
 					</div>
-					<div class="col-md-6">
+					<div class="col-md-6" ,width="80%" ,height="95">
 						<img src="../images/rongyu2.png">
 					</div>
 				</div>
 				<div class="row">
-					<div class="col-md-2">
-						<img src="../images/daquan.png">
+
+					<div class="col-md-3">
+						<img src="../images/productpower/RZ1.jpg">
 					</div>
-					<div class="col-md-2">
-						<img src="../images/daquan.png">
+					<div class="col-md-3">
+						<img src="../images/productpower/RZ2.jpg">
 					</div>
-					<div class="col-md-2">
-						<img src="../images/daquan.png">
+					<div class="col-md-3">
+						<img src="../images/productpower/RZ3.jpg">
 					</div>
-					<div class="col-md-2">
-						<img src="../images/daquan.png">
-					</div>
-					<div class="col-md-2">
-						<img src="../images/daquan.png">
-					</div>
-					<div class="col-md-2">
-						<img src="../images/daquan.png">
+					<div class="col-md-3">
+						<img src="../images/productpower/RZ4.jpg">
 					</div>
 				</div>
 				<div class="row" style="margin-top: 30px;">
-					<div class="col-md-2">
-						<img src="../images/shinaide.png">
+					<div class="col-md-3">
+						<img src="../images/productpower/RZ5.jpg">
 					</div>
-					<div class="col-md-2">
-						<img src="../images/daquan.png">
+					<div class="col-md-3">
+						<img src="../images/productpower/RZ6.jpg">
 					</div>
-					<div class="col-md-2">
-						<img src="../images/daquan.png">
+					<div class="col-md-3">
+						<img src="../images/productpower/RZ7.jpg">
 					</div>
-					<div class="col-md-2">
-						<img src="../images/daquan.png">
+					<div class="col-md-3">
+						<img src="../images/productpower/RZ8.jpg">
 					</div>
-					<div class="col-md-2">
-						<img src="../images/daquan.png">
-					</div>
-					<div class="col-md-2">
-						<img src="../images/daquan.png">
-					</div>
+
 				</div>
 				<div class="row" style="margin: 30px 0;">
-					<div class="col-md-2">
-						<img src="../images/xuji.png">
+					<div class="col-md-3">
+						<img src="../images/productpower/RZ9.jpg">
 					</div>
-					<div class="col-md-2">
-						<img src="../images/daquan.png">
+					<div class="col-md-3">
+						<img src="../images/productpower/RZ10.jpg">
 					</div>
-					<div class="col-md-2">
-						<img src="../images/daquan.png">
+					<div class="col-md-3">
+						<img src="../images/productpower/RZ11.jpg">
 					</div>
-					<div class="col-md-2">
-						<img src="../images/daquan.png">
+					<div class="col-md-3">
+						<img src="../images/productpower/RZ12.jpg">
 					</div>
-					<div class="col-md-2">
-						<img src="../images/daquan.png">
+					<div class="col-md-3">
 					</div>
-					<div class="col-md-2">
-						<img src="../images/daquan.png">
-					</div>
+
 				</div>
 			</div>
 
 		</div>
 
 
-		<div id="google-map" style="margin-bottom: 50px;">
-			<h2>我们的办公地点</h2>
-			<div style="min-height: 500px; width: 100%;" id="map"></div>
-		</div>
-
-
-	
-
 		<!-- Footer -->
-		<div class='footer' style='overflow-x: hidden'>
-			<div class='row' style='display: flex; justify-content: center'>
+		<div class='footer' style='overflow-x: hidden;'>
+			<div class='row' style='display: flex; justify-content: center;'>
 				<div class='col-md-3'>
 					<div class='text-container about'>
 						<h4>联系我们</h4>
-						<p class='white'><img src='../images/icon/phone.png'> : 021-58055790</p>
-						<p class='white'><img src='../images/icon/iphone.png' class='small'> : +86-18721633726
-							+86-18017032987</p>
-						<p class='white'><img src='../images/icon/email.png' class='small'> : qun_wang@linxvalley.com </p>
-						<p class='white'><img src='../images/icon/email.png' class='small'> : yanqian_liao@linxvalley.com
+						<p class='white'><img src='../images/icon/phone.png' style="width:26px;"> : 021-58982160</p>
+						<p class='white'><img src='../images/icon/iphone.png' class='small'> : 18017032338</p>
+						<!-- <p class='white'><img src='images/icon/email.png' class='small'> : qun_wang@linxvalley.com </p> -->
+						<p class='white'><img src='../images/icon/email.png' class='small'> : linx@linxvalley.com
 						</p>
-						<p class='white'><img src='../images/icon/adress.png' class='small'> : 上海市浦东新区灵岩南路295号12号楼12-103室</p>
+						<p class='white'><img src='../images/icon/adress.png' class='small'> : 上海市浦东新区灵岩南路295号12号楼12-103室
+						</p>
 					</div>
-		
+
 				</div>
-		
+
 				<div class='col-md-3'>
 					<div class='text-container'>
 						<h4>我们的使命</h4>
+						<p class='white'>赋能个性化制造</p>
 						<p class='white'>持续研发最落地的制造管理信息系统</p>
 						<p class='white'>通过数字化服务提升制造企业效率</p>
-						<p class='white'>提升质量水平，降低浪费和库存</p>
-						<p class='white'>我们依靠企业生存，企业依靠我们发展</p>
-						<p class='white'>凝聚我们的力量，收获明日的辉煌</p>
 					</div>
 				</div>
-				<div class='col-md-2'>
-					<div class='text-container' style='text-align: center;margin: 0 auto'>
-						<h6 style='color: #FFFFFF'>社会荣誉</h6>
-						<img src='../images/rongyu1.png' alt='' style='width: 100%'>
+				<div class='col-md-4'>
+					<div class='text-container' style='text-align: center;margin: 0 auto;'>
+						<!-- <h6 style='color: #FFFFFF'>我们的地址</h6> -->
+						<div style="min-height: 250px; width: 100%;" id="map"></div>
 					</div>
 				</div>
-		
-				<div class='col-md-2'>
-					<div class='text-container' style='text-align: centermargin: 0 auto'>
-						<h6 style='color: #FFFFFF'>企业证书</h6>
-						<img src='../images/rongyu2.png' alt='' style='width: 100%'>
-					</div>
-				</div>
-		
 			</div>
 		</div>
 		<div class='copyright'>
@@ -441,17 +410,17 @@
 		point: "121.503318,31.162774",
 		address: "上海市浦东新区灵岩南路295号12号楼12-103室"
 	}];
-
+	
 	var map; //Map实例  
 	function map_init() {
 		map = new BMap.Map("map");
-
+	
 		//第1步：设置地图中心点，上海市  
 		var point = new BMap.Point(121.503318, 31.162774);
 		var circle = new BMap.Circle(point, 20, {
 			strokeColor: "blue",
-			strokeWeight: 2,
-			strokeOpacity: 0.5
+			strokeWeight: 1,
+			strokeOpacity: 0.1
 		}); //创建圆
 		var polygon = new BMap.Polygon([
 			new BMap.Point(116.387112, 39.920977),
@@ -461,12 +430,12 @@
 			new BMap.Point(116.41248, 39.927893)
 		], {
 			strokeColor: "blue",
-			strokeWeight: 2,
-			strokeOpacity: 0.5
+			strokeWeight: 1,
+			strokeOpacity: 0.1
 		});
 		map.addOverlay(circle);
 		//第2步：初始化地图,设置中心点坐标和地图级别。  
-		map.centerAndZoom(point, 22);
+		map.centerAndZoom(point, 17);
 		//第3步：启用滚轮放大缩小  
 		map.enableScrollWheelZoom(true);
 		//第4步：向地图中添加缩放控件  
@@ -481,28 +450,25 @@
 			isOpen: 1
 		});
 		map.addControl(ctrlOve);
-
+	
 		//第6步：向地图中添加比例尺控件  
 		var ctrlSca = new window.BMap.ScaleControl({
 			anchor: BMAP_ANCHOR_BOTTOM_LEFT
 		});
 		map.addControl(ctrlSca);
-
+	
 		//第7步：绘制点    
 		for (var i = 0; i < markerArr.length; i++) {
 			var p0 = markerArr[i].point.split(",")[0];
 			var p1 = markerArr[i].point.split(",")[1];
 			var maker = addMarker(new window.BMap.Point(p0, p1), i);
 			addInfoWindow(maker, markerArr[i], i);
-
+	
 		}
 	}
-
-
-
-
-
-
+	
+	
+	
 	// 添加标注  
 	function addMarker(point, index) {
 		var myIcon = new BMap.Icon("http://api.map.baidu.com/img/markers.png",
@@ -517,7 +483,7 @@
 		marker.setAnimation(BMAP_ANIMATION_BOUNCE); //跳动的动画
 		return marker;
 	}
-
+	
 	// 添加信息窗口  
 	function addInfoWindow(marker, poi) {
 		//pop弹窗标题  
@@ -525,11 +491,11 @@
 		//pop弹窗信息  
 		var html = [];
 		html.push(
-		'<table cellspacing="0" style="table-layout:fixed;width:100%;font:12px arial,simsun,sans-serif"><tbody>');
+			'<table cellspacing="0" style="table-layout:fixed;width:100%;font:12px arial,simsun,sans-serif"><tbody>');
 		html.push('<tr>');
 		html.push(
 			'<td style="vertical-align:top;line-height:16px;width:38px;white-space:nowrap;word-break:keep-all">地址:</td>'
-			);
+		);
 		html.push('<td style="vertical-align:top;line-height:16px">' + poi.address + ' </td>');
 		html.push('</tr>');
 		html.push('</tbody></table>');
@@ -537,7 +503,7 @@
 			title: title,
 			width: 200
 		});
-
+	
 		var openInfoWinFun = function() {
 			marker.openInfoWindow(infoWindow);
 		};
