--- a/public/lowCode.html
+++ b/public/lowCode.html
@@ -63,8 +63,8 @@
 			<!-- <a class="navbar-brand logo-text page-scroll" href="index.html">Aria</a> -->
 
 			<!-- Image Logo -->
-			<a class="navbar-brand logo-image" href="../index.html"><img
-					style="height: 60px;width: 60px;background: #fff;border-radius: 5%;" src="../images/logo.jpg"></a>
+			<a class="navbar-brand logo-image" href="../index.html"><img style="height: 60px;width: 60px;"
+					src="../images/LinxLogo.png"></a>
 
 			<!-- Mobile Menu Toggle Button -->
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
@@ -81,7 +81,7 @@
 					</li>
 					<li class="nav-item">
 						<a class="nav-link page-scroll" href="../public/lowCode.html"
-							style="color: #14bf98">低代码PASS平台</a>
+							style="color: #14bf98">低代码PaaS平台</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link page-scroll" href="../public/programme.html">工业电气解决方案</a>
@@ -106,7 +106,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-12">
-						<h1>低代码PASS平台</h1>
+						<h1>低代码PaaS平台</h1>
 					</div> <!-- end of col -->
 				</div> <!-- end of row -->
 			</div> <!-- end of container -->
@@ -251,21 +251,21 @@
 					<h5>已服务的行业类型</h5>
 					<ul>
 						<li><b></b>汽车行业</li>
-						<li><b></b>工业电气行业</li>
-						<li><b></b>自动化行业</li>
-						<li><b></b>医疗器械行业</li>
 						<li><b></b>通讯行业</li>
-						<li><b></b>酒店、房地产行业</li>
 						<li><b></b>服装行业</li>
-						<li><b></b>危化仓储行业</li>
 						<li><b></b>软件行业</li>
+						<li><b></b>自动化行业</li>
 						<li><b></b>半导体行业</li>
+						<li><b></b>危化仓储行业</li>
+						<li><b></b>医疗器械行业</li>
+						<li><b></b>工业电气行业</li>
+						<li><b></b>机电产品装配行业</li>
+						<li><b></b>酒店、房地产行业</li>
 					</ul>
 				</div>
 				<div class="industryList">
 					<h5>已验证交付的软件系统</h5>
 					<ul>
-						<li><b></b>汽车行业</li>
 						<li><b></b>制造执行系统</li>
 						<li><b></b>质量管理系统</li>
 						<li><b></b>仓储管理系统</li>
@@ -280,18 +280,19 @@
 					</ul>
 				</div>
 				<div class="industryList">
-					<h5>已服务的行业类型</h5>
+					<h5>已验证的工艺流程</h5>
 					<ul>
-						<li><b></b>汽车行业</li>
-						<li><b></b>通讯行业</li>
-						<li><b></b>服装行业</li>
-						<li><b></b>软件行业</li>
-						<li><b></b>自动化行业</li>
-						<li><b></b>半导体行业</li>
-						<li><b></b>医疗器械行业</li>
-						<li><b></b>工业电气行业</li>
-						<li><b></b>危化仓储行业</li>
-						<li><b></b>酒店、房地产行业</li>
+						<li><b></b>焊接工艺</li>
+						<li><b></b>SMT工艺</li>
+						<li><b></b>注塑工艺</li>
+						<li><b></b>电镀工艺</li>
+						<li><b></b>冲压工艺</li>
+						<li><b></b>机加工工艺</li>
+						<li><b></b>半导体工艺</li>
+						<li><b></b>电子装配工艺</li>
+						<li><b></b>表面处理工艺</li>
+						<li><b></b>机电装配工艺</li>
+						<li><b></b>钣金、折弯冲压工艺</li>
 					</ul>
 				</div>
 			</div>
@@ -301,7 +302,7 @@
 			<h2>灵娃低代码平台适用于多行业、各类系统的快速搭建</h2>
 			<div class="pinJieImg"></div>
 		</div> -->
-		
+
 		<div class="cards-1" id="hexin">
 			<h2>LINXPaaS将为您带来的价值</h2>
 			<div class="container">
@@ -316,14 +317,15 @@
 							<div class="card-body">
 								<h4 class="card-title">MOM 系统</h4>
 								<p>
-									MES 制造执行系统、APS 高级计划排程系统、WMS 仓储管理系统、EAM设备|工装|检具|模具管理系统、 QMS质量管理系统、EMS能源管理系统等主要数字化工厂的软件系统。
+									MES 制造执行系统、APS 高级计划排程系统、WMS 仓储管理系统、EAM设备|工装|检具|模具管理系统、
+									QMS质量管理系统、EMS能源管理系统等主要数字化工厂的软件系统。
 									根据实际现场实际情况，只需要根据实际现场流程，
 									进行简单调整适配就可以完成适用于不同工厂、车间、产线的软件应用。
 								</p>
 							</div>
 						</div>
 						<!-- end of card -->
-		
+
 						<!-- Card -->
 						<div class="card" style="height: 380px;">
 							<span class="fa-stack">
@@ -333,11 +335,11 @@
 							<div class="card-body">
 								<h4 class="card-title">精益管理系统</h4>
 								<p>ANDON暗灯系统，E-CALL电子叫料，Suggestion 培训管理系统，合理化建议 Suggestion，电子操作指导书E-SOP，
-								SPC统计过程控制系统，LayorAudit分层审核管理系统，CPC变更点管理系统 ，LeanSPF精益现场管理。。</p>
+									SPC统计过程控制系统，LayorAudit分层审核管理系统，CPC变更点管理系统 ，LeanSPF精益现场管理。</p>
 							</div>
 						</div>
 						<!-- end of card -->
-		
+
 						<!-- Card -->
 						<div class="card" style="height: 380px;">
 							<span class="fa-stack">
@@ -347,11 +349,11 @@
 							<div class="card-body">
 								<h4 class="card-title">数据采集工具</h4>
 								<p>内嵌 1000+种数据采集通讯协议，在实际使用中仅需要进行通讯和地址配置，
-								就可以完成数据采集。</p>
+									就可以完成数据采集。</p>
 							</div>
 						</div>
 						<!-- end of card -->
-		
+
 					</div>
 					<!-- end of col -->
 				</div>
@@ -359,8 +361,8 @@
 			</div>
 			<!-- end of container -->
 		</div>
-		
-		
+
+
 		<div id="home" class="cards-2" style="padding-top: 1rem;background-color: #fff;">
 			<div class="container">
 				<div class="row">
@@ -380,11 +382,11 @@
 							<div class="card-body" style="padding: 2rem 1em">
 								<h3 class="card-title">平台工具而非项目聚合产品</h3>
 								以开发平台为目标向开发多年研发积累形成的强大工具，而非根据项目聚合形成的配置化产品。
-								可让工程师通过简单、低代码的开发方式迅速实现贴合现场的二次应用开发，不需要复杂的编程过程。 
+								可让工程师通过简单、低代码的开发方式迅速实现贴合现场的二次应用开发，不需要复杂的编程过程。
 							</div>
 						</div>
 						<!-- end of card -->
-		
+
 						<!-- Card -->
 						<div class="card" style="margin-bottom: 1rem;">
 							<div class="card-image">
@@ -395,11 +397,11 @@
 								<ul class="list-unstyled li-space-lg">
 									依托平台开发的应用软件在已经经过了20年+实际工业互联场景使用验证，实现了在工业电器、汽车零部件、军工、航天、通用机械等行业大量实际落地交付。
 									覆盖了电镀工艺、冲压工艺、SMT工艺、注塑工艺、机加工工艺、热处理工艺、机电产品装配工艺等不同行业的应用开发及落地。
-		
+
 							</div>
 						</div>
 						<!-- end of card -->
-		
+
 						<!-- Card -->
 						<div class="card" style="margin-bottom: 1rem;">
 							<div class="card-image">
@@ -411,8 +413,8 @@
 								根据实际数采协议，只需要进行通讯、地址、内容的匹配就可以完成数采过程。不再需要高昂成本的数采IoT盒子。
 							</div>
 						</div>
-						 
-		
+
+
 					</div>
 					<!-- end of col -->
 				</div>
@@ -420,9 +422,9 @@
 			</div>
 			<!-- end of container -->
 		</div>
-		
-		
-		
+
+
+
 
 		<div id="Office" class="container">
 			<h2>全面详尽的“Office” 式帮助文档</h2>
@@ -460,7 +462,7 @@
 
 
 
-		<div id="log" class="container">
+		<!-- <div id="log" class="container">
 			<h2>变更自动完整记录，版本之间自有选择比较</h2>
 			<div class="officeBox">
 				<div class="officeLeft"></div>
@@ -495,34 +497,33 @@
 				</div>
 			</div>
 		</div>
+ -->
 
-
-		<div id="business" class="container">
+		<!-- <div id="business" class="container">
 			<h2>业务及数据库程序自动生成</h2>
 			<div class="officeBox">
 				<div class="officeLeft"></div>
 				<div class="officeCenter"></div>
 				<div class="officeRight"></div>
 			</div>
-		</div>
+		</div> -->
 
 
 
 		<!-- Footer -->
-		<div class='footer' style='overflow-x: hidden'>
-			<div class='row' style='display: flex; justify-content: center'>
+		<div class='footer' style='overflow-x: hidden;'>
+			<div class='row' style='display: flex; justify-content: center;'>
 				<div class='col-md-3'>
 					<div class='text-container about'>
 						<h4>联系我们</h4>
-						<p class='white'><img src='../images/icon/phone.png'> : 021-58055790</p>
-						<p class='white'><img src='../images/icon/iphone.png' class='small'> : +86-18721633726
-							+86-18017032987</p>
-						<p class='white'><img src='../images/icon/email.png' class='small'> : qun_wang@linxvalley.com
+						<p class='white'><img src='../images/icon/phone.png' style="width:26px;"> : 021-58982160</p>
+						<p class='white'><img src='../images/icon/iphone.png' class='small'> : 18017032338</p>
+						<!-- <p class='white'><img src='images/icon/email.png' class='small'> : qun_wang@linxvalley.com </p> -->
+						<p class='white'><img src='../images/icon/email.png' class='small'> : linx@linxvalley.com
 						</p>
-						<p class='white'><img src='../images/icon/email.png' class='small'> :
-							yanqian_liao@linxvalley.com
+						<p class='white'><img src='../images/icon/adress.png' class='small'> :
+							上海市浦东新区灵岩南路295号12号楼12-103室
 						</p>
-						<p class='white'><img src='../images/icon/adress.png' class='small'> : 上海市浦东新区灵岩南路295号12号楼12-103室</p>
 					</div>
 
 				</div>
@@ -530,27 +531,17 @@
 				<div class='col-md-3'>
 					<div class='text-container'>
 						<h4>我们的使命</h4>
+						<p class='white'>赋能个性化制造</p>
 						<p class='white'>持续研发最落地的制造管理信息系统</p>
 						<p class='white'>通过数字化服务提升制造企业效率</p>
-						<p class='white'>提升质量水平，降低浪费和库存</p>
-						<p class='white'>我们依靠企业生存，企业依靠我们发展</p>
-						<p class='white'>凝聚我们的力量，收获明日的辉煌</p>
 					</div>
 				</div>
-				<div class='col-md-2'>
-					<div class='text-container' style='text-align: center;margin: 0 auto'>
-						<h6 style='color: #FFFFFF'>社会荣誉</h6>
-						<img src='../images/rongyu1.png' alt='' style='width: 100%'>
+				<div class='col-md-4'>
+					<div class='text-container' style='text-align: center;margin: 0 auto;'>
+						<!-- <h6 style='color: #FFFFFF'>我们的地址</h6> -->
+						<div style="min-height: 250px; width: 100%;" id="map"></div>
 					</div>
 				</div>
-
-				<div class='col-md-2'>
-					<div class='text-container' style='text-align: centermargin: 0 auto'>
-						<h6 style='color: #FFFFFF'>企业证书</h6>
-						<img src='../images/rongyu2.png' alt='' style='width: 100%'>
-					</div>
-				</div>
-
 			</div>
 		</div>
 		<div class='copyright'>
@@ -576,12 +567,123 @@
 		<script src="../js/validator.min.js"></script> <!-- Validator.js - Bootstrap plugin that validates forms -->
 		<script src="../js/scripts.js"></script> <!-- Custom scripts -->
 		<script src="../js/about.js" type="text/javascript" charset="utf-8"></script>
-
-
+		<script src="http://api.map.baidu.com/api?v=1.4&callback=map_init" type="text/javascript" charset="utf-8">
+		</script>
 		<script src="http://api.map.baidu.com/getscript?v=1.4&ak=&services=&t=20210201021024" type="text/javascript"
 			charset="utf-8"></script>
 	</body>
 </html>
 <script type="text/javascript">
-
+	var markerArr = [{
+		title: "上海灵娃智能科技有限公司",
+		point: "121.503318,31.162774",
+		address: "上海市浦东新区灵岩南路295号12号楼12-103室"
+	}];
+	
+	var map; //Map实例  
+	function map_init() {
+		map = new BMap.Map("map");
+	
+		//第1步：设置地图中心点，上海市  
+		var point = new BMap.Point(121.503318, 31.162774);
+		var circle = new BMap.Circle(point, 20, {
+			strokeColor: "blue",
+			strokeWeight: 1,
+			strokeOpacity: 0.1
+		}); //创建圆
+		var polygon = new BMap.Polygon([
+			new BMap.Point(116.387112, 39.920977),
+			new BMap.Point(116.385243, 39.913063),
+			new BMap.Point(116.394226, 39.917988),
+			new BMap.Point(116.401772, 39.921364),
+			new BMap.Point(116.41248, 39.927893)
+		], {
+			strokeColor: "blue",
+			strokeWeight: 1,
+			strokeOpacity: 0.1
+		});
+		map.addOverlay(circle);
+		//第2步：初始化地图,设置中心点坐标和地图级别。  
+		map.centerAndZoom(point, 17);
+		//第3步：启用滚轮放大缩小  
+		map.enableScrollWheelZoom(true);
+		//第4步：向地图中添加缩放控件  
+		var ctrlNav = new window.BMap.NavigationControl({
+			anchor: BMAP_ANCHOR_TOP_LEFT,
+			type: BMAP_NAVIGATION_CONTROL_LARGE
+		});
+		map.addControl(ctrlNav);
+		//第5步：向地图中添加缩略图控件  
+		var ctrlOve = new window.BMap.OverviewMapControl({
+			anchor: BMAP_ANCHOR_BOTTOM_RIGHT,
+			isOpen: 1
+		});
+		map.addControl(ctrlOve);
+	
+		//第6步：向地图中添加比例尺控件  
+		var ctrlSca = new window.BMap.ScaleControl({
+			anchor: BMAP_ANCHOR_BOTTOM_LEFT
+		});
+		map.addControl(ctrlSca);
+	
+		//第7步：绘制点    
+		for (var i = 0; i < markerArr.length; i++) {
+			var p0 = markerArr[i].point.split(",")[0];
+			var p1 = markerArr[i].point.split(",")[1];
+			var maker = addMarker(new window.BMap.Point(p0, p1), i);
+			addInfoWindow(maker, markerArr[i], i);
+	
+		}
+	}
+	
+	
+	
+	// 添加标注  
+	function addMarker(point, index) {
+		var myIcon = new BMap.Icon("http://api.map.baidu.com/img/markers.png",
+			new BMap.Size(23, 25), {
+				offset: new BMap.Size(10, 25),
+				imageOffset: new BMap.Size(0, 0 - index * 25)
+			});
+		var marker = new BMap.Marker(point, {
+			icon: myIcon
+		});
+		map.addOverlay(marker);
+		marker.setAnimation(BMAP_ANIMATION_BOUNCE); //跳动的动画
+		return marker;
+	}
+	
+	// 添加信息窗口  
+	function addInfoWindow(marker, poi) {
+		//pop弹窗标题  
+		var title = '<div style="font-weight:bold;color:#CE5521;font-size:14px">' + poi.title + '</div>';
+		//pop弹窗信息  
+		var html = [];
+		html.push(
+			'<table cellspacing="0" style="table-layout:fixed;width:100%;font:12px arial,simsun,sans-serif"><tbody>');
+		html.push('<tr>');
+		html.push(
+			'<td style="vertical-align:top;line-height:16px;width:38px;white-space:nowrap;word-break:keep-all">地址:</td>'
+		);
+		html.push('<td style="vertical-align:top;line-height:16px">' + poi.address + ' </td>');
+		html.push('</tr>');
+		html.push('</tbody></table>');
+		var infoWindow = new BMap.InfoWindow(html.join(""), {
+			title: title,
+			width: 200
+		});
+	
+		var openInfoWinFun = function() {
+			marker.openInfoWindow(infoWindow);
+		};
+		marker.addEventListener("click", openInfoWinFun);
+		return openInfoWinFun;
+	}
+	//异步调用百度js  
+	function map_load() {
+		var load = document.createElement("script");
+		load.src = "http://api.map.baidu.com/api?v=1.4&callback=map_init";
+		document.body.appendChild(load);
+	}
+	window.onload = map_load;
 </script>
