--- a/details/ANDON.html
+++ b/details/ANDON.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 	<head>
@@ -62,7 +62,7 @@
 
 			<!-- Image Logo -->
 			<a class="navbar-brand logo-image" href="../index.html"><img style="height: 60px;width: 300px;"
-					src="../images/logo.jpg" alt="alternative"></a>
+					src="../images/LinxLogo.jpg" alt="alternative"></a>
 
 			<!-- Mobile Menu Toggle Button -->
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
