--- a/details/E_SOP.html
+++ b/details/E_SOP.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 	<head>
@@ -58,7 +58,7 @@
 			<!-- <a class="navbar-brand logo-text page-scroll" href="index.html">Aria</a> -->
 
 			<!-- Image Logo -->
-			<a class="navbar-brand logo-image" href="../index.html"><img style="height: 60px;width: 300px;" src="../images/logo.jpg"
+			<a class="navbar-brand logo-image" href="../index.html"><img style="height: 60px;width: 300px;" src="../images/LinxLogo.jpg"
 				 alt="alternative"></a>
 
 			<!-- Mobile Menu Toggle Button -->
