--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
 			<!-- <a class="navbar-brand logo-text page-scroll" href="index.html">Aria</a> -->
 
 			<!-- Image Logo -->
-			<a class="navbar-brand logo-image" href="index.html"><img
-					style="height: 60px;width: 60px;background: #fff;border-radius: 50%;" src="images/logo.jpg"></a>
+			<a class="navbar-brand logo-image" href="index.html"><img style="height: 60px;width: 60px"
+					src="images/LinxLogo.png"></a>
 
 			<!-- Mobile Menu Toggle Button -->
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
@@ -79,7 +79,7 @@
 						<a class="nav-link page-scroll" href="index.html" style="color: #14bf98">首页</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link page-scroll" href="public/lowCode.html">低代码PASS平台</a>
+						<a class="nav-link page-scroll" href="public/lowCode.html">低代码PaaS平台</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link page-scroll" href="public/programme.html">工业电气解决方案</a>
@@ -158,7 +158,8 @@
 							<!-- Slide -->
 							<div class="swiper-slide">
 								<div class="card animate__animated  animate__backInLeft">
-									<img class="card-image" src="images/testimonial-2.jpg" alt="alternative">
+									<img class="card-image" src="images/testimonial-2.jpg" alt="alternative"
+										style="object-fit: contain;">
 									<div class="card-body">
 										<div class="testimonial-author">LINXPaaS</div>
 										<!-- <div class="testimonial-text">
@@ -201,7 +202,7 @@
 
 
 		<div class="container" id="LINXPaaS">
-			<h2 style="text-align: center;margin: 100px 0;">传统开发模式 VS. LINXPaaS 自主模式</h2>
+			<h2 style="text-align: center;margin: 100px 0;">传统开发模式 VS   LINXPaaS 自主模式</h2>
 			<div class="LINXPaaCard">
 				<div class="LINXPaaCardLeft">
 					<div class="textCard CardLeft  animate__animated animate__fadeInUpBig">
@@ -331,8 +332,11 @@
 				<h2 style="text-align: center;margin: 50px 0;">庞大的头部客户群验证
 				</h2>
 				<div class="row imageslist">
-					<div class="col-lg-2">
+					<!-- <div class="col-lg-2">
 						<img class="img-fluid" src="images/logo/image1.png">
+					</div> -->
+					<div class="col-lg-2">
+						<img class="img-fluid" src="images/logo/logo7.png">
 					</div>
 					<div class="col-lg-2">
 						<img class="img-fluid" src="images/logo/image2.png">
@@ -398,9 +402,7 @@
 					<div class="col-lg-2">
 						<img class="img-fluid" src="images/logo/logo6.png">
 					</div>
-					<div class="col-lg-2">
-						<img class="img-fluid" src="images/logo/logo7.png">
-					</div>
+
 				</div>
 			</div>
 		</div>
@@ -410,9 +412,50 @@
 		<div style="text-align: center;margin: 50px;display: none" id="togole2"> <a class="btn-solid-lg page-scroll"
 				href="javaScript:;">点击收起</a></div>
 		<!-- Footer -->
-		<script src="js/footer.js"></script>
+		<!-- <script src="js/footer.js"></script> -->
 		<!-- end of copyright -->
 		<!-- end of copyright -->
+		<div class='footer' style='overflow-x: hidden;'>
+			<div class='row' style='display: flex; justify-content: center;'>
+				<div class='col-md-3'>
+					<div class='text-container about'>
+						<h4>联系我们</h4>
+						<p class='white'><img src='images/icon/phone.png' style="width:26px;"> : 021-58982160</p>
+						<p class='white'><img src='images/icon/iphone.png' class='small'> : 18017032338</p>
+						<!-- <p class='white'><img src='images/icon/email.png' class='small'> : qun_wang@linxvalley.com </p> -->
+						<p class='white'><img src='images/icon/email.png' class='small'> : linx@linxvalley.com
+						</p>
+						<p class='white'><img src='images/icon/adress.png' class='small'> : 上海市浦东新区灵岩南路295号12号楼12-103室
+						</p>
+					</div>
+
+				</div>
+
+				<div class='col-md-3'>
+					<div class='text-container'>
+						<h4>我们的使命</h4>
+						<p class='white'>赋能个性化制造</p>
+						<p class='white'>持续研发最落地的制造管理信息系统</p>
+						<p class='white'>通过数字化服务提升制造企业效率</p>
+					</div>
+				</div>
+				<div class='col-md-4'>
+					<div class='text-container' style='text-align: center;margin: 0 auto;'>
+						<!-- <h6 style='color: #FFFFFF'>我们的地址</h6> -->
+						<div style="min-height: 250px; width: 100%;" id="map"></div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class='copyright'>
+			<div class='container'>
+				<div class='row'>
+					<div class='col-lg-12'>
+						<p class='p-small'>备案号：沪ICP备16031549号-1　 <a>沪公网安备 31010602003203号</a></p>
+					</div>
+				</div>
+			</div>
+		</div>
 
 
 		<!-- Scripts -->
@@ -430,6 +473,10 @@
 		<script src="js/validator.min.js"></script>
 		<!-- Validator.js - Bootstrap plugin that validates forms -->
 		<script src="js/scripts.js"></script>
+		<script src="http://api.map.baidu.com/api?v=1.4&callback=map_init" type="text/javascript" charset="utf-8">
+		</script>
+		<script src="http://api.map.baidu.com/getscript?v=1.4&ak=&services=&t=20210201021024" type="text/javascript"
+			charset="utf-8"></script>
 		<!-- Custom scripts -->
 	</body>
 
@@ -446,4 +493,119 @@
 		$('#togole1').css("display", "block");
 		$('#togole2').css("display", "none");
 	})
+
+
+
+	var markerArr = [{
+		title: "上海灵娃智能科技有限公司",
+		point: "121.503318,31.162774",
+		address: "上海市浦东新区灵岩南路295号12号楼12-103室"
+	}];
+
+	var map; //Map实例  
+	function map_init() {
+		map = new BMap.Map("map");
+
+		//第1步：设置地图中心点，上海市  
+		var point = new BMap.Point(121.503318, 31.162774);
+		var circle = new BMap.Circle(point, 20, {
+			strokeColor: "blue",
+			strokeWeight: 1,
+			strokeOpacity: 0.1
+		}); //创建圆
+		var polygon = new BMap.Polygon([
+			new BMap.Point(116.387112, 39.920977),
+			new BMap.Point(116.385243, 39.913063),
+			new BMap.Point(116.394226, 39.917988),
+			new BMap.Point(116.401772, 39.921364),
+			new BMap.Point(116.41248, 39.927893)
+		], {
+			strokeColor: "blue",
+			strokeWeight: 1,
+			strokeOpacity: 0.1
+		});
+		map.addOverlay(circle);
+		//第2步：初始化地图,设置中心点坐标和地图级别。  
+		map.centerAndZoom(point, 17);
+		//第3步：启用滚轮放大缩小  
+		map.enableScrollWheelZoom(true);
+		//第4步：向地图中添加缩放控件  
+		var ctrlNav = new window.BMap.NavigationControl({
+			anchor: BMAP_ANCHOR_TOP_LEFT,
+			type: BMAP_NAVIGATION_CONTROL_LARGE
+		});
+		map.addControl(ctrlNav);
+		//第5步：向地图中添加缩略图控件  
+		var ctrlOve = new window.BMap.OverviewMapControl({
+			anchor: BMAP_ANCHOR_BOTTOM_RIGHT,
+			isOpen: 1
+		});
+		map.addControl(ctrlOve);
+
+		//第6步：向地图中添加比例尺控件  
+		var ctrlSca = new window.BMap.ScaleControl({
+			anchor: BMAP_ANCHOR_BOTTOM_LEFT
+		});
+		map.addControl(ctrlSca);
+
+		//第7步：绘制点    
+		for (var i = 0; i < markerArr.length; i++) {
+			var p0 = markerArr[i].point.split(",")[0];
+			var p1 = markerArr[i].point.split(",")[1];
+			var maker = addMarker(new window.BMap.Point(p0, p1), i);
+			addInfoWindow(maker, markerArr[i], i);
+
+		}
+	}
+
+
+
+	// 添加标注  
+	function addMarker(point, index) {
+		var myIcon = new BMap.Icon("http://api.map.baidu.com/img/markers.png",
+			new BMap.Size(23, 25), {
+				offset: new BMap.Size(10, 25),
+				imageOffset: new BMap.Size(0, 0 - index * 25)
+			});
+		var marker = new BMap.Marker(point, {
+			icon: myIcon
+		});
+		map.addOverlay(marker);
+		marker.setAnimation(BMAP_ANIMATION_BOUNCE); //跳动的动画
+		return marker;
+	}
+
+	// 添加信息窗口  
+	function addInfoWindow(marker, poi) {
+		//pop弹窗标题  
+		var title = '<div style="font-weight:bold;color:#CE5521;font-size:14px">' + poi.title + '</div>';
+		//pop弹窗信息  
+		var html = [];
+		html.push(
+			'<table cellspacing="0" style="table-layout:fixed;width:100%;font:12px arial,simsun,sans-serif"><tbody>');
+		html.push('<tr>');
+		html.push(
+			'<td style="vertical-align:top;line-height:16px;width:38px;white-space:nowrap;word-break:keep-all">地址:</td>'
+		);
+		html.push('<td style="vertical-align:top;line-height:16px">' + poi.address + ' </td>');
+		html.push('</tr>');
+		html.push('</tbody></table>');
+		var infoWindow = new BMap.InfoWindow(html.join(""), {
+			title: title,
+			width: 200
+		});
+
+		var openInfoWinFun = function() {
+			marker.openInfoWindow(infoWindow);
+		};
+		marker.addEventListener("click", openInfoWinFun);
+		return openInfoWinFun;
+	}
+	//异步调用百度js  
+	function map_load() {
+		var load = document.createElement("script");
+		load.src = "http://api.map.baidu.com/api?v=1.4&callback=map_init";
+		document.body.appendChild(load);
+	}
+	window.onload = map_load;
 </script>
