--- a/public/product.html
+++ b/public/product.html
@@ -61,8 +61,8 @@
 			<!-- <a class="navbar-brand logo-text page-scroll" href="index.html">Aria</a> -->
 
 			<!-- Image Logo -->
-			<a class="navbar-brand logo-image" href="../index.html"><img
-					style="height: 60px;width: 60px;background: #fff;border-radius: 5%;" src="../images/logo.jpg"></a>
+			<a class="navbar-brand logo-image" href="../index.html"><img style="height: 60px;width: 60px;"
+					src="../images/LinxLogo.png"></a>
 
 			<!-- Mobile Menu Toggle Button -->
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
@@ -78,7 +78,7 @@
 						<a class="nav-link page-scroll" href="../index.html">首页</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link page-scroll" href="../public/lowCode.html">低代码PASS平台</a>
+						<a class="nav-link page-scroll" href="../public/lowCode.html">低代码PaaS平台</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link page-scroll" href="../public/programme.html">工业电气解决方案</a>
@@ -129,28 +129,28 @@
 							<div class="element-item">
 								<a class="popup-with-move-anim" href="#project-1">
 									<div class="element-item-overlay"><span>ANDON暗灯-现场快反系统</span></div><img
-										src="../images/product1.png" alt="alternative">
+										src="../images/product1.jpg" alt="alternative">
 								</a>
 							</div>
 
 							<div class="element-item">
 								<a class="popup-with-move-anim" href="#project-2">
 									<div class="element-item-overlay"><span>E-Suggestion 合理化建议工具</span></div><img
-										src="../images/ESuggestion.png" alt="alternative">
+										src="../images/product2.jpg" alt="alternative">
 								</a>
 							</div>
 
 							<div class="element-item">
 								<a class="popup-with-move-anim" href="#project-3">
 									<div class="element-item-overlay"><span>E-CALL拉动式供料系统</span></div><img
-										src="../images/ecall.png" alt="alternative">
+										src="../images/product3.jpg" alt="alternative">
 								</a>
 							</div>
 
 							<div class="element-item">
 								<a class="popup-with-move-anim" href="#project-4">
 									<div class="element-item-overlay"><span>SPC 统计过程管理工具</span></div><img
-										src="../images/scp.png" alt="alternative">
+										src="../images/product4.jpg" alt="alternative">
 								</a>
 							</div>
 
@@ -158,21 +158,21 @@
 							<div class="element-item">
 								<a class="popup-with-move-anim" href="#project-5">
 									<div class="element-item-overlay"><span>EIM事件管理系统</span></div><img
-										src="../images/cpc.png" alt="alternative">
+										src="../images/product5.jpg" alt="alternative">
 								</a>
 							</div>
 
 							<div class="element-item">
 								<a class="popup-with-move-anim" href="#project-6">
 									<div class="element-item-overlay"><span>Layer Audit– 分层审核工具</span></div><img
-										src="../images/LayerAudit.png" alt="alternative">
+										src="../images/product6.jpg" alt="alternative">
 								</a>
 							</div>
 
 							<div class="element-item">
 								<a class="popup-with-move-anim" href="#project-7">
 									<div class="element-item-overlay"><span>E-SOP电子操作指导</span></div><img
-										src="../images/esop.png" alt="alternative">
+										src="../images/product7.jpg" alt="alternative">
 								</a>
 							</div>
 
@@ -180,7 +180,7 @@
 							<div class="element-item">
 								<a class="popup-with-move-anim" href="#project-8">
 									<div class="element-item-overlay"><span>Training培训系统</span></div><img
-										src="../images/Training1.png" alt="alternative">
+										src="../images/product8.jpg" alt="alternative">
 								</a>
 							</div>
 
@@ -205,7 +205,7 @@
 			<div class="row">
 				<button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
 				<div class="col-lg-8">
-					<img class="img-fluid" src="../images/product1.png" alt="alternative">
+					<img class="img-fluid" src="../images/product1.jpg" alt="alternative">
 				</div>
 				<!-- end of col -->
 				<div class="col-lg-4">
@@ -232,7 +232,7 @@
 			<div class="row">
 				<button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
 				<div class="col-lg-8">
-					<img class="img-fluid" src="../images/ESuggestion.png" alt="alternative">
+					<img class="img-fluid" src="../images/product2.jpg" alt="alternative">
 				</div>
 				<!-- end of col -->
 				<div class="col-lg-4">
@@ -256,7 +256,7 @@
 			<div class="row">
 				<button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
 				<div class="col-lg-8">
-					<img class="img-fluid" src="../images/ecall.png" alt="alternative">
+					<img class="img-fluid" src="../images/product3.jpg" alt="alternative">
 				</div>
 				<!-- end of col -->
 				<div class="col-lg-4">
@@ -285,7 +285,7 @@
 			<div class="row">
 				<button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
 				<div class="col-lg-8">
-					<img class="img-fluid" src="../images/scp.png" alt="alternative">
+					<img class="img-fluid" src="../images/product4.jpg" alt="alternative">
 				</div>
 				<!-- end of col -->
 				<div class="col-lg-4">
@@ -312,7 +312,7 @@
 			<div class="row">
 				<button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
 				<div class="col-lg-8">
-					<img class="img-fluid" src="../images/cpc.png" alt="alternative">
+					<img class="img-fluid" src="../images/product5.jpg" alt="alternative">
 				</div>
 				<!-- end of col -->
 				<div class="col-lg-4">
@@ -344,7 +344,7 @@
 			<div class="row">
 				<button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
 				<div class="col-lg-8">
-					<img class="img-fluid" src="../images/LayerAudit.png" alt="alternative">
+					<img class="img-fluid" src="../images/product6.jpg" alt="alternative">
 				</div>
 				<!-- end of col -->
 				<div class="col-lg-4">
@@ -368,7 +368,7 @@
 			<div class="row">
 				<button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
 				<div class="col-lg-8">
-					<img class="img-fluid" src="../images/esop.png" alt="alternative">
+					<img class="img-fluid" src="../images/product7.jpg" alt="alternative">
 				</div>
 				<!-- end of col -->
 				<div class="col-lg-4">
@@ -394,7 +394,7 @@
 			<div class="row">
 				<button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
 				<div class="col-lg-8">
-					<img class="img-fluid" src="../images/Training1.png" alt="alternative">
+					<img class="img-fluid" src="../images/product8.jpg" alt="alternative">
 				</div>
 				<!-- end of col -->
 				<div class="col-lg-4">
@@ -421,20 +421,19 @@
 
 
 		<!-- Footer -->
-		<div class='footer' style='overflow-x: hidden'>
-			<div class='row' style='display: flex; justify-content: center'>
+		<div class='footer' style='overflow-x: hidden;'>
+			<div class='row' style='display: flex; justify-content: center;'>
 				<div class='col-md-3'>
 					<div class='text-container about'>
 						<h4>联系我们</h4>
-						<p class='white'><img src='../images/icon/phone.png'> : 021-58055790</p>
-						<p class='white'><img src='../images/icon/iphone.png' class='small'> : +86-18721633726
-							+86-18017032987</p>
-						<p class='white'><img src='../images/icon/email.png' class='small'> : qun_wang@linxvalley.com
+						<p class='white'><img src='../images/icon/phone.png' style="width:26px;"> : 021-58982160</p>
+						<p class='white'><img src='../images/icon/iphone.png' class='small'> : 18017032338</p>
+						<!-- <p class='white'><img src='images/icon/email.png' class='small'> : qun_wang@linxvalley.com </p> -->
+						<p class='white'><img src='../images/icon/email.png' class='small'> : linx@linxvalley.com
 						</p>
-						<p class='white'><img src='../images/icon/email.png' class='small'> :
-							yanqian_liao@linxvalley.com
+						<p class='white'><img src='../images/icon/adress.png' class='small'> :
+							上海市浦东新区灵岩南路295号12号楼12-103室
 						</p>
-						<p class='white'><img src='../images/icon/adress.png' class='small'> : 上海市浦东新区灵岩南路295号12号楼12-103室</p>
 					</div>
 
 				</div>
@@ -442,27 +441,17 @@
 				<div class='col-md-3'>
 					<div class='text-container'>
 						<h4>我们的使命</h4>
+						<p class='white'>赋能个性化制造</p>
 						<p class='white'>持续研发最落地的制造管理信息系统</p>
 						<p class='white'>通过数字化服务提升制造企业效率</p>
-						<p class='white'>提升质量水平，降低浪费和库存</p>
-						<p class='white'>我们依靠企业生存，企业依靠我们发展</p>
-						<p class='white'>凝聚我们的力量，收获明日的辉煌</p>
 					</div>
 				</div>
-				<div class='col-md-2'>
-					<div class='text-container' style='text-align: center;margin: 0 auto'>
-						<h6 style='color: #FFFFFF'>社会荣誉</h6>
-						<img src='../images/rongyu1.png' alt='' style='width: 100%'>
+				<div class='col-md-4'>
+					<div class='text-container' style='text-align: center;margin: 0 auto;'>
+						<!-- <h6 style='color: #FFFFFF'>我们的地址</h6> -->
+						<div style="min-height: 250px; width: 100%;" id="map"></div>
 					</div>
 				</div>
-
-				<div class='col-md-2'>
-					<div class='text-container' style='text-align: centermargin: 0 auto'>
-						<h6 style='color: #FFFFFF'>企业证书</h6>
-						<img src='../images/rongyu2.png' alt='' style='width: 100%'>
-					</div>
-				</div>
-
 			</div>
 		</div>
 		<div class='copyright'>
@@ -487,5 +476,123 @@
 		<script src="../js/isotope.pkgd.min.js"></script> <!-- Isotope for filter -->
 		<script src="../js/validator.min.js"></script> <!-- Validator.js - Bootstrap plugin that validates forms -->
 		<script src="../js/scripts.js"></script> <!-- Custom scripts -->
+		<script src="http://api.map.baidu.com/api?v=1.4&callback=map_init" type="text/javascript" charset="utf-8">
+		</script>
+		<script src="http://api.map.baidu.com/getscript?v=1.4&ak=&services=&t=20210201021024" type="text/javascript"
+			charset="utf-8"></script>
 	</body>
 </html>
+<script>
+	var markerArr = [{
+		title: "上海灵娃智能科技有限公司",
+		point: "121.503318,31.162774",
+		address: "上海市浦东新区灵岩南路295号12号楼12-103室"
+	}];
+	
+	var map; //Map实例  
+	function map_init() {
+		map = new BMap.Map("map");
+	
+		//第1步：设置地图中心点，上海市  
+		var point = new BMap.Point(121.503318, 31.162774);
+		var circle = new BMap.Circle(point, 20, {
+			strokeColor: "blue",
+			strokeWeight: 1,
+			strokeOpacity: 0.1
+		}); //创建圆
+		var polygon = new BMap.Polygon([
+			new BMap.Point(116.387112, 39.920977),
+			new BMap.Point(116.385243, 39.913063),
+			new BMap.Point(116.394226, 39.917988),
+			new BMap.Point(116.401772, 39.921364),
+			new BMap.Point(116.41248, 39.927893)
+		], {
+			strokeColor: "blue",
+			strokeWeight: 1,
+			strokeOpacity: 0.1
+		});
+		map.addOverlay(circle);
+		//第2步：初始化地图,设置中心点坐标和地图级别。  
+		map.centerAndZoom(point, 17);
+		//第3步：启用滚轮放大缩小  
+		map.enableScrollWheelZoom(true);
+		//第4步：向地图中添加缩放控件  
+		var ctrlNav = new window.BMap.NavigationControl({
+			anchor: BMAP_ANCHOR_TOP_LEFT,
+			type: BMAP_NAVIGATION_CONTROL_LARGE
+		});
+		map.addControl(ctrlNav);
+		//第5步：向地图中添加缩略图控件  
+		var ctrlOve = new window.BMap.OverviewMapControl({
+			anchor: BMAP_ANCHOR_BOTTOM_RIGHT,
+			isOpen: 1
+		});
+		map.addControl(ctrlOve);
+	
+		//第6步：向地图中添加比例尺控件  
+		var ctrlSca = new window.BMap.ScaleControl({
+			anchor: BMAP_ANCHOR_BOTTOM_LEFT
+		});
+		map.addControl(ctrlSca);
+	
+		//第7步：绘制点    
+		for (var i = 0; i < markerArr.length; i++) {
+			var p0 = markerArr[i].point.split(",")[0];
+			var p1 = markerArr[i].point.split(",")[1];
+			var maker = addMarker(new window.BMap.Point(p0, p1), i);
+			addInfoWindow(maker, markerArr[i], i);
+	
+		}
+	}
+	
+	
+	
+	// 添加标注  
+	function addMarker(point, index) {
+		var myIcon = new BMap.Icon("http://api.map.baidu.com/img/markers.png",
+			new BMap.Size(23, 25), {
+				offset: new BMap.Size(10, 25),
+				imageOffset: new BMap.Size(0, 0 - index * 25)
+			});
+		var marker = new BMap.Marker(point, {
+			icon: myIcon
+		});
+		map.addOverlay(marker);
+		marker.setAnimation(BMAP_ANIMATION_BOUNCE); //跳动的动画
+		return marker;
+	}
+	
+	// 添加信息窗口  
+	function addInfoWindow(marker, poi) {
+		//pop弹窗标题  
+		var title = '<div style="font-weight:bold;color:#CE5521;font-size:14px">' + poi.title + '</div>';
+		//pop弹窗信息  
+		var html = [];
+		html.push(
+			'<table cellspacing="0" style="table-layout:fixed;width:100%;font:12px arial,simsun,sans-serif"><tbody>');
+		html.push('<tr>');
+		html.push(
+			'<td style="vertical-align:top;line-height:16px;width:38px;white-space:nowrap;word-break:keep-all">地址:</td>'
+		);
+		html.push('<td style="vertical-align:top;line-height:16px">' + poi.address + ' </td>');
+		html.push('</tr>');
+		html.push('</tbody></table>');
+		var infoWindow = new BMap.InfoWindow(html.join(""), {
+			title: title,
+			width: 200
+		});
+	
+		var openInfoWinFun = function() {
+			marker.openInfoWindow(infoWindow);
+		};
+		marker.addEventListener("click", openInfoWinFun);
+		return openInfoWinFun;
+	}
+	//异步调用百度js  
+	function map_load() {
+		var load = document.createElement("script");
+		load.src = "http://api.map.baidu.com/api?v=1.4&callback=map_init";
+		document.body.appendChild(load);
+	}
+	window.onload = map_load;
+</script>
